# aistack-radar-skill

./: .clawhubignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONCEPTS.md  CONFIGURATION.md  CONTRIBUTORS.md  LICENSE  README.md  greptile.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: openai.yaml
aistack_radar/: __init__.py  __main__.py
docs/: how-it-works.md  methodology.md  search-quality-eval.md  skill-usage.md  sources.md
fixtures/: stack_comparison_topics.json
skills/aistack-radar/: SKILL.md
skills/aistack-radar/fixtures/: demo_signal.json
skills/aistack-radar/scripts/: aistack_radar.py
src/aistack_radar/: __init__.py  __main__.py  cli.py  models.py  planner.py  reporting.py  scoring.py  synthesis.py
src/aistack_radar/connectors/: __init__.py  collector.py  fixture.py  http.py  live.py
tests/: test_cli.py  test_collector.py  test_fixture_and_scoring.py  test_http.py  test_planner.py  test_skill_runtime.py  test_synthesis_reporting.py
